--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="style1.css">
 </head>
 <body id="gradient">
-	<h1>Background generator//Cool generator</h1>
+	<h1>Background generator//COOL generator</h1>
 	<input type="color" class="color1" name="color1" value="#00ff00">
 	<input  type="color" class="color2" name="color2" value="#ff0000">
 	<h2>Current Css background</h2>
