--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,7 @@
 	<h1>Background generator//COOL generator</h1>
 	<input type="color" class="color1" name="color1" value="#00ff00">
 	<input  type="color" class="color2" name="color2" value="#ff0000">
-	<h2>Current Css background</h2>
+	<h2>This is the  background</h2>
 	<h3></h3>
 	<script type="text/javascript" src="script3.js"></script>
 </body>
